--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a id="menu-icon" href="#"><img src="images/menu-icon.png" alt="menu-icon"></a>
-        <a id="logo" href="index1.html"><img src="images/logo.png" alt="logo"></a>
+        <a id="logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
         <div id="header-icons">
             <a href="#"><img src="images/search-icon.png" alt="search-icon">
                 <p>검색</p>
@@ -30,7 +30,7 @@
     <div id="container">
         <nav id="nav">
             <ul>
-                <li><a href="index1.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index2.html">베스트</a></li>
                 <li><a href="index3.html">신상품</a></li>
                 <li><a href="index3.html">이벤트</a></li>
