--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a id="menu-icon" href="#"><img src="images/menu-icon.png" alt="menu-icon"></a>
-        <a id="logo" href="index1.html"><img src="images/logo.png" alt="logo"></a>
+        <a id="logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
         <div id="header-icons">
             <a href="#"><img src="images/search-icon.png" alt="search-icon">
                 <p>검색</p>
@@ -28,10 +28,10 @@
     <div id="nav">
         <div id="nav-container">
             <ul>
-                <li><a href="index1.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index2.html">베스트</a></li>
-                <li><a href="index2.html">신상품</a></li>
-                <li><a href="index2.html">이벤트</a></li>
+                <li><a href="index3.html">신상품</a></li>
+                <li><a href="index3.html">이벤트</a></li>
                 <li><a href="index3.html">굿즈/GIFT</a></li>
                 <li><a href="index3.html">책방ONLY</a></li>
             </ul>
@@ -39,7 +39,7 @@
     </div> <!-- /#nav -->
     <div id="sub-nav">
         <div>
-            <a href="index1.html"><img src="images/home-icon.png" alt="home-icon"></a>
+            <a href="index.html"><img src="images/home-icon.png" alt="home-icon"></a>
             <span>></span>
             <p>베스트</p>
             <span>></span>
