요소 추가 및 수정
top button 추가 / special automatic slide 추가 / special button 추가

--- a/index3.html
+++ b/index3.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <button id="top">TOP</button>
     <header>
         <a id="menu-icon" href="#"><img src="images/menu-icon.png" alt="menu-icon"></a>
         <a id="logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
@@ -174,8 +175,8 @@
                         </div> <!-- /.special-text -->
                     </li>
                 </ul> <!-- /#content-container -->
-                <button id="special-prev"><img src="images/prev1-white.png" alt="prev-white"></button>
-                <button id="special-next"><img src="images/next1-white.png" alt="next-white"></button>
+                <button id="special-prev"></button>
+                <button id="special-next"></button>
             </div>
         </div> <!-- /#content -->
     </div> <!-- /#special-price -->
