--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <button id="top">TOP</button>
     <header>
         <a id="menu-icon" href="#"><img src="images/menu-icon.png" alt="menu-icon"></a>
         <a id="logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
