--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="css/style2.css">
     </head>
 <body>
+    <button id="top">TOP</button>
     <header>
-        <a id="menu-icon" href="#"><img src="images/menu-icon.png" alt="menu-icon"></a>
         <a id="logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
         <div id="header-icons">
             <a href="#"><img src="images/search-icon.png" alt="search-icon">
