--- a/index3.html
+++ b/index3.html
@@ -44,7 +44,10 @@
         <div id="banner-container">
             <ul>
                 <li><img src="images/page3-banner.jpg" alt="page3-banner"></li>
+                <li><img src="images/page3-banner2.jpg" alt="page3-banner"></li>
             </ul>
+            <div class="buttons"></div>
+            <div class="paginations"></div>
         </div> <!-- /#banner-container -->
     </div> <!-- /#banner -->
     <div id="icons">
