goods-container1,2 수정

--- a/index3.html
+++ b/index3.html
@@ -104,24 +104,28 @@
     </div> <!-- /#icons -->
     <div id="goods-pick">
         <h2>책방 Pick</h2>
-        <img src="images/goodsPick1.png" alt="goods-pick1">
-        <div id="goods-pick-text1" class="goods-pick-text">
-            <p>윤동주 - 별 헤는 밤</p>
-            <p>클래식 블루 VER</p>
-            <p>
-                윤동주 시인의 대표작 ‘별 헤는 밤’과 ‘하늘과 바람과 별과 시’ <br>
-                초판본 디자인에서 영감을 얻은 특별 에디션
-            </p>
-        </div> <!-- /#goods-pick-text1 -->
-        <img src="images/goodsPick2.png" alt="goods-pick2">
-        <div id="goods-pick-text2" class="goods-pick-text">
-            <p>해리포터 에디션</p>
-            <p>기숙사 니트 블랭킷</p>
-            <p>
-                한 땀 한 땀 설계된 고급 니트 재질로 <br>
-                혹독한 호그와트의 날씨에서도 망토만큼이나 포근하게
-            </p>
-        </div> <!-- /#goods-pick-text2 -->
+        <div id="goods-container1">
+            <img src="images/goodsPick1.png" alt="goods-pick1">
+            <div id="goods-pick-text1" class="goods-pick-text">
+                <p>윤동주 - 별 헤는 밤</p>
+                <p>클래식 블루 VER</p>
+                <p>
+                    윤동주 시인의 대표작 ‘별 헤는 밤’과 ‘하늘과 바람과 별과 시’ <br>
+                    초판본 디자인에서 영감을 얻은 특별 에디션
+                </p>
+            </div> <!-- /#goods-pick-text1 -->
+        </div> <!-- #goods-container1 -->
+        <div id="goods-container2">
+            <img src="images/goodsPick2.png" alt="goods-pick2">
+            <div id="goods-pick-text2" class="goods-pick-text">
+                <p>해리포터 에디션</p>
+                <p>기숙사 니트 블랭킷</p>
+                <p>
+                    한 땀 한 땀 설계된 고급 니트 재질로 <br>
+                    혹독한 호그와트의 날씨에서도 망토만큼이나 포근하게
+                </p>
+            </div> <!-- /#goods-pick-text2 -->
+        </div> <!-- #goods-container2 -->
     </div> <!-- /#goods-pick -->
     <div id="special-price">
         <h2>하루 특가</h2>
